<resources>
    <string name="app_name">RNC</string>
    <string name="search">Buscar</string>
    <string name="rnc">RNC</string>
    <string name="filters">Filtros</string>
    <string name="hint_edit_main">Ingrese su búsqueda</string>
    <string name="ci">CI</string>
    <string name="name">Nombre</string>
    <string name="city">Ciudad</string>
    <string name="province">Provincía</string>
    <string name="address">Dirección</string>
    <string name="select_filter">Seleccione un filtro para realizar la búsqueda</string>
    <string name="write_something">Escriba algo para realizar la búsqueda</string>
    <string name="cant_find_results">No se encontraron resultados</string>
    <string name="ci_full_text">Comprobante de inscripción:</string>
    <string name="authority">Autoridad:</string>
    <string name="zip_code_title">Código Postal:</string>
    <string name="location_title">Ubicación</string>
    <string name="contact_data_title">Datos de contacto</string>
    <string name="cant_find_additional_data">Solo se encuentra disponible la ubicación</string>
    <string name="not_defined">Sin especificar</string>
</resources>