<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/search_view">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@color/light_blue_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_main"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:scaleType="fitStart"
            android:layout_marginStart="10dp"
            android:src="@drawable/min_relaciones_exteriores_comercio_internacional_culto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logo_main"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:scaleType="fitEnd"
            android:src="@drawable/logo"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/filters_button"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/light_blue_200"
            android:text="@string/filters"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_main"
            android:layout_marginStart="5dp"/>

        <EditText
            android:id="@+id/edit_search"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_edit_main"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/search_button"
            app:layout_constraintStart_toEndOf="@+id/filters_button"
            app:layout_constraintTop_toBottomOf="@+id/image_main" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/light_blue_200"
            android:text="@string/search"
            android:layout_marginEnd="5dp"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_main" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
        android:paddingBottom="110dp"
        android:layout_marginTop="5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>